[package]
name = "crabbo"
version = "0.0.4"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serenity = { version = "0.12.5", features = ["client", "gateway", "model"] }
async-trait = "0.1"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
